// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Helper function: getIcon renders correctly 1`] = `
<RCTSafeAreaView
  actived={false}
  defaultColor="#b8b8b8"
  defaultactivedColor="#53C000"
  name="backButton"
  size={100}
  style={undefined}
>
  <Svg />
</RCTSafeAreaView>
`;

exports[`Helper function: getIcon renders with actived parameter 1`] = `
<RCTSafeAreaView
  actived={true}
  defaultColor="#b8b8b8"
  defaultactivedColor="#53C000"
  name="backButton"
  size={100}
  style={undefined}
>
  <Svg />
</RCTSafeAreaView>
`;

exports[`Helper function: getIcon renders with color parameter 1`] = `
<RCTSafeAreaView
  actived={false}
  defaultColor="#122E46"
  defaultactivedColor="#53C000"
  name="backButton"
  size={100}
  style={undefined}
>
  <Svg />
</RCTSafeAreaView>
`;
